--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGODB_CONNECTION_STRING = mongodb+srv://geek:pRMGkYdtyCGWsr1k@mern-booking-app.hwpfmp5.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET_KEY = dECcldbzf3fqc2iCqqFEmiGfM9tEtMtj
