--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGODB_CONNECTION_STRING = mongodb+srv://geek:pRMGkYdtyCGWsr1k@mern-booking-app.hwpfmp5.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET_KEY = dECcldbzf3fqc2iCqqFEmiGfM9tEtMtj
+CLIENT_URL= http://localhost:5174
